--- a/prompts/bank_statement_structure_classifier.yaml
+++ b/prompts/bank_statement_structure_classifier.yaml
@@ -4,22 +4,23 @@ task: "classification"
 description: "Classifies bank statement structural layout patterns based on column headers, table organization, and text structure"
 
 instruction: |
-  Classify the bank statement structure by identifying the column headers and layout pattern.
+  Classify the bank statement structure by examining the actual visual layout.
 
-  STEP 1 - READ THE COLUMN HEADERS:
-  Look at the TOP of the transaction list. Do you see column header text like:
-  - "Date", "Description", "Amount", "Debit", "Credit", "Balance", "Transaction", "Particulars"?
+  STEP 1 - DESCRIBE WHAT YOU SEE AT THE TOP:
+  Look at the very top of the image. Describe what is actually visible:
+  - Is there a row of column header labels (like "Date", "Description", "Debit", "Credit")?
+  - OR are there UI elements like tabs, search bars, navigation buttons?
+  - OR is there a date shown as a section header (like "Wednesday" or "Thu 13 Jun 2024")?
 
-  If YES: This is a TABLE format. Count the headers (3, 4, or 5+ columns) and note their exact text.
-  If NO headers visible: This is a MOBILE APP format. Look for section headers with dates or tabs.
+  STEP 2 - IDENTIFY TABLE vs MOBILE:
+  - If you see a horizontal row of column labels at the top = TABLE format
+  - If you see tabs, search bars, or date section headers = MOBILE format
+  - If you see card-like transaction tiles with no column headers = MOBILE format
 
-  STEP 2 - MATCH TO CATEGORY:
-  Based on the headers you found, select the ONE category that matches.
+  STEP 3 - COUNT AND CLASSIFY (for tables only):
+  If table format: Count the column headers and read their exact text left-to-right.
 
-  STEP 3 - PROVIDE EVIDENCE:
-  State what you observed (column headers or mobile layout features).
-
-  IMPORTANT: Most bank statements are tables with clear column headers at the top!
+  CRITICAL: Do NOT assume headers exist. Only report headers you can actually see in the image.
 
 classification_categories:
 
@@ -151,22 +152,30 @@ classification_categories:
 output_format: |
   Provide your classification in this EXACT format:
 
+  VISUAL_OBSERVATION:
+  At the top of the image, I observe: [Describe exactly what you see - tabs, search bar, column headers, section headers, etc.]
+
   STRUCTURE_TYPE: [Choose ONE identifier from the categories above]
   CONFIDENCE: [HIGH/MEDIUM/LOW]
 
-  COLUMN_HEADERS_FOUND: [Write the exact header text you see at the top, separated by " | "]
-  Example: "Date | Transaction | Debit | Credit | Balance"
-  Or if no headers: "NONE - Mobile interface"
+  COLUMN_HEADERS_FOUND: [If table: Write exact header text separated by " | ". If mobile: Write "NONE"]
 
   REASONING:
-  - I can see [number] column headers at the top of the transaction table
-  - The headers read: [exact text]
-  - This matches [STRUCTURE_TYPE] because [reason]
+  [Explain how your visual observation led to this classification]
 
-  OR for mobile:
-  - There are no column headers visible
-  - Instead I see [date section headers / tabs / card layout]
-  - This matches [STRUCTURE_TYPE] because [reason]
+  EXAMPLES:
+
+  For a table:
+  VISUAL_OBSERVATION: At the top of the image, I observe a horizontal row with the text "Date", "Transaction", "Debit", "Credit", "Balance" formatted as column headers.
+  STRUCTURE_TYPE: TABLE_5COL_STANDARD
+  COLUMN_HEADERS_FOUND: Date | Transaction | Debit | Credit | Balance
+  REASONING: Five column headers are clearly visible in a table format, matching the standard 5-column layout.
+
+  For a mobile app:
+  VISUAL_OBSERVATION: At the top of the image, I observe three tabs labeled "All", "Incoming", "Outgoing", followed by a date section header "Wednesday".
+  STRUCTURE_TYPE: MOBILE_APP_DARK
+  COLUMN_HEADERS_FOUND: NONE
+  REASONING: Tab navigation and section headers indicate mobile app interface, not a table structure.
 
 decision_tree:
   step_1_interface_type:
