--- a/prompts/bank_statement_structure_classifier.yaml
+++ b/prompts/bank_statement_structure_classifier.yaml
@@ -4,23 +4,31 @@ task: "classification"
 description: "Classifies bank statement structural layout patterns based on column headers, table organization, and text structure"
 
 instruction: |
-  Classify the bank statement structure by examining the actual visual layout.
+  Classify the bank statement structure by examining how transactions are displayed.
 
-  STEP 1 - DESCRIBE WHAT YOU SEE AT THE TOP:
-  Look at the very top of the image. Describe what is actually visible:
-  - Is there a row of column header labels (like "Date", "Description", "Debit", "Credit")?
-  - OR are there UI elements like tabs, search bars, navigation buttons?
-  - OR is there a date shown as a section header (like "Wednesday" or "Thu 13 Jun 2024")?
+  IGNORE: Search bars, filter buttons, navigation tabs at the very top - these are UI chrome.
 
-  STEP 2 - IDENTIFY TABLE vs MOBILE:
-  - If you see a horizontal row of column labels at the top = TABLE format
-  - If you see tabs, search bars, or date section headers = MOBILE format
-  - If you see card-like transaction tiles with no column headers = MOBILE format
+  FOCUS ON: The transaction list area (the body of the document where transactions appear).
 
-  STEP 3 - COUNT AND CLASSIFY (for tables only):
-  If table format: Count the column headers and read their exact text left-to-right.
+  STEP 1 - LOOK AT THE TRANSACTION AREA:
+  Examine where the actual transactions are listed. What structure do you see?
 
-  CRITICAL: Do NOT assume headers exist. Only report headers you can actually see in the image.
+  STEP 2 - IDENTIFY THE STRUCTURE:
+
+  TABLE FORMAT (has column headers above transaction data):
+  - Look for column header labels like "Date", "Description", "Debit", "Credit", "Balance", "Transaction", "Particulars"
+  - Headers appear in a row ABOVE the transaction data
+  - Each transaction row aligns with these columns
+
+  MOBILE FORMAT (no column headers, card/tile layout):
+  - No column headers visible above transactions
+  - Transactions appear as cards or tiles
+  - May have date section headers (like "Wednesday", "Thu 13 Jun 2024") that group transactions
+  - May show "bal $X" inline with amounts
+
+  STEP 3 - COUNT AND READ:
+  If table: Count column headers and read their exact text left-to-right.
+  If mobile: Describe the layout pattern (cards, tiles, section headers).
 
 classification_categories:
 
@@ -152,22 +160,22 @@ classification_categories:
 output_format: |
   Answer these questions about THIS specific image:
 
-  1. WHAT DO YOU SEE AT THE VERY TOP?
-  Describe the actual elements visible: [your description]
+  1. TRANSACTION AREA STRUCTURE:
+  Describe what you see in the transaction list area: [your description]
 
-  2. ARE THERE COLUMN HEADERS?
+  2. ARE THERE COLUMN HEADERS ABOVE THE TRANSACTIONS?
   Answer: YES or NO
-  If YES, list them: [exact text from image]
-  If NO, what do you see instead?: [tabs, search bar, date header, etc.]
+  If YES, list them exactly as shown: [exact text left-to-right]
+  If NO, describe the layout: [cards, tiles, date section headers, etc.]
 
-  3. HOW MANY COLUMNS?
+  3. HOW MANY COLUMN HEADERS?
   Count: [number, or write "N/A - not a table"]
 
   4. STRUCTURE_TYPE: [Choose ONE identifier]
 
   5. CONFIDENCE: [HIGH/MEDIUM/LOW]
 
-  Do NOT use example text. Describe ONLY what you actually see in THIS image.
+  Focus on the TRANSACTION AREA only. Ignore search bars and navigation at the top.
 
 decision_tree:
   step_1_interface_type:
