--- a/environment_ivl35.yml
+++ b/environment_ivl35.yml
@@ -20,16 +20,36 @@ dependencies:
     - timm>=0.9.0
     - einops>=0.6.0
     - accelerate>=0.27.0
-    - flash-attn>=2.0.0
     - pyyaml>=6.0.0
     - jupyter>=1.0.0
     - ipython>=8.0.0
+    - ipykernel
 
 # Installation:
 # conda env create -f environment_ivl35.yml
 # conda activate ivl35_env
 #
+# IMPORTANT: Install flash-attn separately (requires torch to be installed first):
+# pip install flash-attn --no-build-isolation
+#
 # H200 GPU Optimized:
 # - 8B model fits easily on single H200 (80GB HBM3)
 # - Use torch_dtype=torch.bfloat16
 # - Enable use_flash_attn=True
+
+# # 1. Activate the environment
+# conda activate ivl35_env
+
+# # 2. Install ipykernel (if not already in environment.yml)
+# pip install ipykernel
+
+# # 3. Create the Jupyter kernel
+# python -m ipykernel install --user --name=ivl35_env --display-name "Python (InternVL3.5)"
+
+# # 4. Verify kernel installation
+# jupyter kernelspec list
+
+# To use in Jupyter:
+# 1. Start Jupyter: jupyter notebook or jupyter lab
+# 2. Create/open a notebook
+# 3. Select Kernel → Change Kernel → Python (InternVL3.5)
